Pushing the updated Exercise-1.html to dev branch
The update includes change for argument name from data to data_new in the second transformation function

--- a/Exercise-1.html
+++ b/Exercise-1.html
@@ -483,6 +483,105 @@ print(ratings)</code></pre>
 ## WALL,R.A.             7.016667
 ## WRIGHT,D.B.           7.941667
 ## ZARRILLI,K.J.         7.425000</code></pre>
+<pre class="r"><code># this chunk defines a second function which calculates judge&#39;s total rating out of 120.
+#the first part of the code defines the transformation function
+total_rating &lt;- function(data_new){
+  data_new$total_rating &lt;- rowSums(data_new, na.rm = TRUE)
+  return(data_new)
+}
+# the second part of the code applies the function to the dataset of interest and saves the transformed dataset.
+ratings &lt;- total_rating(ratings)
+
+# the final part of this code prints the modified dataset
+print(ratings)</code></pre>
+<pre><code>##                 CONT INTG DMNR DILG CFMG DECI PREP FAMI ORAL WRIT PHYS RTEN
+## AARONSON,L.H.    5.7  7.9  7.7  7.3  7.1  7.4  7.1  7.1  7.1  7.0  8.3  7.8
+## ALEXANDER,J.M.   6.8  8.9  8.8  8.5  7.8  8.1  8.0  8.0  7.8  7.9  8.5  8.7
+## ARMENTANO,A.J.   7.2  8.1  7.8  7.8  7.5  7.6  7.5  7.5  7.3  7.4  7.9  7.8
+## BERDON,R.I.      6.8  8.8  8.5  8.8  8.3  8.5  8.7  8.7  8.4  8.5  8.8  8.7
+## BRACKEN,J.J.     7.3  6.4  4.3  6.5  6.0  6.2  5.7  5.7  5.1  5.3  5.5  4.8
+## BURNS,E.B.       6.2  8.8  8.7  8.5  7.9  8.0  8.1  8.0  8.0  8.0  8.6  8.6
+## CALLAHAN,R.J.   10.6  9.0  8.9  8.7  8.5  8.5  8.5  8.5  8.6  8.4  9.1  9.0
+## COHEN,S.S.       7.0  5.9  4.9  5.1  5.4  5.9  4.8  5.1  4.7  4.9  6.8  5.0
+## DALY,J.J.        7.3  8.9  8.9  8.7  8.6  8.5  8.4  8.4  8.4  8.5  8.8  8.8
+## DANNEHY,J.F.     8.2  7.9  6.7  8.1  7.9  8.0  7.9  8.1  7.7  7.8  8.5  7.9
+## DEAN,H.H.        7.0  8.0  7.6  7.4  7.3  7.5  7.1  7.2  7.1  7.2  8.4  7.7
+## DEVITA,H.J.      6.5  8.0  7.6  7.2  7.0  7.1  6.9  7.0  7.0  7.1  6.9  7.2
+## DRISCOLL,P.J.    6.7  8.6  8.2  6.8  6.9  6.6  7.1  7.3  7.2  7.2  8.1  7.7
+## GRILLO,A.E.      7.0  7.5  6.4  6.8  6.5  7.0  6.6  6.8  6.3  6.6  6.2  6.5
+## HADDEN,W.L.JR.   6.5  8.1  8.0  8.0  7.9  8.0  7.9  7.8  7.8  7.8  8.4  8.0
+## HAMILL,E.C.      7.3  8.0  7.4  7.7  7.3  7.3  7.3  7.2  7.1  7.2  8.0  7.6
+## HEALEY.A.H.      8.0  7.6  6.6  7.2  6.5  6.5  6.8  6.7  6.4  6.5  6.9  6.7
+## HULL,T.C.        7.7  7.7  6.7  7.5  7.4  7.5  7.1  7.3  7.1  7.3  8.1  7.4
+## LEVINE,I.        8.3  8.2  7.4  7.8  7.7  7.7  7.7  7.8  7.5  7.6  8.0  8.0
+## LEVISTER,R.L.    9.6  6.9  5.7  6.6  6.9  6.6  6.2  6.0  5.8  5.8  7.2  6.0
+## MARTIN,L.F.      7.1  8.2  7.7  7.1  6.6  6.6  6.7  6.7  6.8  6.8  7.5  7.3
+## MCGRATH,J.F.     7.6  7.3  6.9  6.8  6.7  6.8  6.4  6.3  6.3  6.3  7.4  6.6
+## MIGNONE,A.F.     6.6  7.4  6.2  6.2  5.4  5.7  5.8  5.9  5.2  5.8  4.7  5.2
+## MISSAL,H.M.      6.2  8.3  8.1  7.7  7.4  7.3  7.3  7.3  7.2  7.3  7.8  7.6
+## MULVEY,H.M.      7.5  8.7  8.5  8.6  8.5  8.4  8.5  8.5  8.4  8.4  8.7  8.7
+## NARUK,H.J.       7.8  8.9  8.7  8.9  8.7  8.8  8.9  9.0  8.8  8.9  9.0  9.0
+## O&#39;BRIEN,F.J.     7.1  8.5  8.3  8.0  7.9  7.9  7.8  7.8  7.8  7.7  8.3  8.2
+## O&#39;SULLIVAN,T.J.  7.5  9.0  8.9  8.7  8.4  8.5  8.4  8.3  8.3  8.3  8.8  8.7
+## PASKEY,L.        7.5  8.1  7.7  8.2  8.0  8.1  8.2  8.4  8.0  8.1  8.4  8.1
+## RUBINOW,J.E.     7.1  9.2  9.0  9.0  8.4  8.6  9.1  9.1  8.9  9.0  8.9  9.2
+## SADEN.G.A.       6.6  7.4  6.9  8.4  8.0  7.9  8.2  8.4  7.7  7.9  8.4  7.5
+## SATANIELLO,A.G.  8.4  8.0  7.9  7.9  7.8  7.8  7.6  7.4  7.4  7.4  8.1  7.9
+## SHEA,D.M.        6.9  8.5  7.8  8.5  8.1  8.2  8.4  8.5  8.1  8.3  8.7  8.3
+## SHEA,J.F.JR.     7.3  8.9  8.8  8.7  8.4  8.5  8.5  8.5  8.4  8.4  8.8  8.8
+## SIDOR,W.J.       7.7  6.2  5.1  5.6  5.6  5.9  5.6  5.6  5.3  5.5  6.3  5.3
+## SPEZIALE,J.A.    8.5  8.3  8.1  8.3  8.4  8.2  8.2  8.1  7.9  8.0  8.0  8.2
+## SPONZO,M.J.      6.9  8.3  8.0  8.1  7.9  7.9  7.9  7.7  7.6  7.7  8.1  8.0
+## STAPLETON,J.F.   6.5  8.2  7.7  7.8  7.6  7.7  7.7  7.7  7.5  7.6  8.5  7.7
+## TESTO,R.J.       8.3  7.3  7.0  6.8  7.0  7.1  6.7  6.7  6.7  6.7  8.0  7.0
+## TIERNEY,W.L.JR.  8.3  8.2  7.8  8.3  8.4  8.3  7.7  7.6  7.5  7.7  8.1  7.9
+## WALL,R.A.        9.0  7.0  5.9  7.0  7.0  7.2  6.9  6.9  6.5  6.6  7.6  6.6
+## WRIGHT,D.B.      7.1  8.4  8.4  7.7  7.5  7.7  7.8  8.2  8.0  8.1  8.3  8.1
+## ZARRILLI,K.J.    8.6  7.4  7.0  7.5  7.5  7.7  7.4  7.2  6.9  7.0  7.8  7.1
+##                 overall_rating total_rating
+## AARONSON,L.H.         7.291667     94.79167
+## ALEXANDER,J.M.        8.150000    105.95000
+## ARMENTANO,A.J.        7.616667     99.01667
+## BERDON,R.I.           8.458333    109.95833
+## BRACKEN,J.J.          5.733333     74.53333
+## BURNS,E.B.            8.116667    105.51667
+## CALLAHAN,R.J.         8.858333    115.15833
+## COHEN,S.S.            5.458333     70.95833
+## DALY,J.J.             8.516667    110.71667
+## DANNEHY,J.F.          7.891667    102.59167
+## DEAN,H.H.             7.458333     96.95833
+## DEVITA,H.J.           7.125000     92.62500
+## DRISCOLL,P.J.         7.366667     95.76667
+## GRILLO,A.E.           6.683333     86.88333
+## HADDEN,W.L.JR.        7.850000    102.05000
+## HAMILL,E.C.           7.450000     96.85000
+## HEALEY.A.H.           6.866667     89.26667
+## HULL,T.C.             7.400000     96.20000
+## LEVINE,I.             7.808333    101.50833
+## LEVISTER,R.L.         6.608333     85.90833
+## MARTIN,L.F.           7.091667     92.19167
+## MCGRATH,J.F.          6.783333     88.18333
+## MIGNONE,A.F.          5.841667     75.94167
+## MISSAL,H.M.           7.458333     96.95833
+## MULVEY,H.M.           8.450000    109.85000
+## NARUK,H.J.            8.783333    114.18333
+## O&#39;BRIEN,F.J.          7.941667    103.24167
+## O&#39;SULLIVAN,T.J.       8.483333    110.28333
+## PASKEY,L.             8.066667    104.86667
+## RUBINOW,J.E.          8.791667    114.29167
+## SADEN.G.A.            7.775000    101.07500
+## SATANIELLO,A.G.       7.800000    101.40000
+## SHEA,D.M.             8.191667    106.49167
+## SHEA,J.F.JR.          8.500000    110.50000
+## SIDOR,W.J.            5.808333     75.50833
+## SPEZIALE,J.A.         8.183333    106.38333
+## SPONZO,M.J.           7.841667    101.94167
+## STAPLETON,J.F.        7.683333     99.88333
+## TESTO,R.J.            7.108333     92.40833
+## TIERNEY,W.L.JR.       7.983333    103.78333
+## WALL,R.A.             7.016667     91.21667
+## WRIGHT,D.B.           7.941667    103.24167
+## ZARRILLI,K.J.         7.425000     96.52500</code></pre>
 </div>
 
 
